samples/_failures_safe/1761307407_35b416_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_92c1bb0f.c: In function ‘main’:
./samples/SAFE/__tmp_92c1bb0f.c:163:35: error: expected ‘;’ at end of input
  163 |             case EVENT_END: printf
      |                                   ^
      |                                   ;
./samples/SAFE/__tmp_92c1bb0f.c:163:13: error: expected declaration or statement at end of input
  163 |             case EVENT_END: printf
      |             ^~~~
./samples/SAFE/__tmp_92c1bb0f.c:163:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_92c1bb0f.c:163:13: error: expected declaration or statement at end of input
